languages/io-automaton-fe/src/test/resources/valid/symtab/ForEntryFactoryTest.ioautomaton
package valid.symtab;

import valid.symtab.Test;
import java.util.List;

automaton ForEntryFactoryTest{
    
    //Array
    input int[][] arrayBasic;
    
    //Generic
    variable List<List<Integer>> genericNoArray;
    
    //Non of the above
    output Test noGenericNoArray;
    
    
    //states
    state Who_Cares;
    initial Who_Cares;
    
}