languages/io-automaton-fe/src/test/resources/invalid/GuardIsNotBoolean.ioautomaton
package invalid;

import invalid.Test;

automaton GuardIsNotBoolean{
    input int i1;        //FULL type
    variable Integer i2; //QUALIFIED type
    input Test i3;       //Self written JavaType
    
    output int out;
    
    state A,B;    
    initial A;
    
    A -> B [(i1+i1)*2];
    A -> B [i2];
    A -> B [i3];
}